--- a/Diploma_Curator_Subsystem/Diploma_Curator_Subsystem/Views/Tasks/Index.cshtml
+++ b/Diploma_Curator_Subsystem/Diploma_Curator_Subsystem/Views/Tasks/Index.cshtml
@@ -15,8 +15,8 @@
             <th>Название</th>
             <th>Описание</th>
             <th>Альтернативы</th>
-            <th>Дата создания</th>
-            <th>Дата окончания</th>
+            <th style="min-width:100px;">Дата создания</th>
+            <th style="min-width:100px;">Дата окончания</th>
             <th>Предметная область</th>
             <th>Статус</th>
         </tr>
@@ -46,11 +46,11 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Status.Name)
             </td>
-            <td>
-                @*<a asp-action="Edit" asp-route-id="@item.ID">Редактировать</a>*@
+            @*<td>
+                <a asp-action="Edit" asp-route-id="@item.ID">Редактировать</a>
                 <a asp-action="Details" asp-route-id="@item.ID">Подробно</a>
-                @*<a asp-action="Delete" asp-route-id="@item.ID">Удалить</a>*@
-            </td>
+                <a asp-action="Delete" asp-route-id="@item.ID">Удалить</a>
+            </td>*@
         </tr>
         }
     </tbody>
