--- a/Diploma_Curator_Subsystem/Diploma_Curator_Subsystem/Views/Users/Index.cshtml
+++ b/Diploma_Curator_Subsystem/Diploma_Curator_Subsystem/Views/Users/Index.cshtml
@@ -46,9 +46,7 @@
                 }
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Редактировать</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Подробно</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Удалить</a>
+                <a asp-action="Projects" asp-route-id="@item.ID">Проекты</a>
             </td>
         </tr>
         }
