--- a/Diploma_Curator_Subsystem/Diploma_Curator_Subsystem/Views/Tasks/Index.cshtml
+++ b/Diploma_Curator_Subsystem/Diploma_Curator_Subsystem/Views/Tasks/Index.cshtml
@@ -14,7 +14,7 @@
         <tr>
             <th>Название</th>
             <th>Описание</th>
-            <th>Альтернативы</th>
+            <th style="min-width:140px;">Альтернативы</th>
             <th style="min-width:100px;">Дата создания</th>
             <th style="min-width:100px;">Дата окончания</th>
             <th>Предметная область</th>
