--- a/Diploma_Curator_Subsystem/Diploma_Curator_Subsystem/Views/Queries/Details.cshtml
+++ b/Diploma_Curator_Subsystem/Diploma_Curator_Subsystem/Views/Queries/Details.cshtml
@@ -10,104 +10,108 @@
 <div>
     <h4>Запрос</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            Max экспертов
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Query.MaxNumExpert)
-        </dd>
-        <dt>
-            Min экспертов
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Query.MinNumExpert)
-        </dd>
-        <dt>
-            Min коэффициент компетентности эксперта в группе
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Query.MinCompetitionCoef)
-        </dd>
-        <dt>
-            Средний коэффициент компетентности эксперта в группе
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Query.AvgCompetitionCoef)
-        </dd>
-        <dt>
-            Требуемая дата
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Query.RequiredDate)
-        </dd>
-        <dt>
-            Шаг планирования
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Query.Step)
-        </dd>
-        <dt>
-            Max возможно смещенная дата
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Query.LastDate)
-        </dd>
-        <dt>
-            Задача
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Query.Task.Title)
-        </dd>
-        @{
-        if (ViewBag.IsResult == "true")
-        {
-            <dt>
-                Эксперты
-            </dt>
-            <dd>
+    <div class="row">
+        <div class="col-md-12">
+            <dl class="dl-horizontal">
+                <dt>
+                    Max экспертов
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Query.MaxNumExpert)
+                </dd>
+                <dt>
+                    Min экспертов
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Query.MinNumExpert)
+                </dd>
+                <dt>
+                    Min коэффициент компетентности эксперта в группе
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Query.MinCompetitionCoef)
+                </dd>
+                <dt>
+                    Средний коэффициент компетентности эксперта в группе
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Query.AvgCompetitionCoef)
+                </dd>
+                <dt>
+                    Требуемая дата
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Query.RequiredDate)
+                </dd>
+                <dt>
+                    Шаг планирования
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Query.Step)
+                </dd>
+                <dt>
+                    Max возможно смещенная дата
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Query.LastDate)
+                </dd>
+                <dt>
+                    Задача
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Query.Task.Title)
+                </dd>
                 @{
-                    if (Model.Users.Count != 0)
+                    if (ViewBag.IsResult == "true")
                     {
-                        for (var i = 0; i < ViewBag.Sizes.Count; i++) //по всем вариантам
-                        {
-                            var num = ViewBag.Sizes[i];
-                            <div style="border:solid #dbd4d4 1px; margin-bottom: 10px;">
-                                <p style="font-weight: bold; font-size: 18px;">@ViewBag.Dates[i].ToString("dd/MM/yyyy")</p>
-                                @for (var j = 0; j < num; j++) //по элементам в варианте
+                        <dt>
+                            Эксперты
+                        </dt>
+                        <dd>
+                            @{
+                                if (Model.Users.Count != 0)
                                 {
-                                    foreach (var user in Model.Users)
+                                    for (var i = 0; i < ViewBag.Sizes.Count; i++) //по всем вариантам
                                     {
-                                        var arr = ViewBag.Arrays[i];
-                                        if (user.ID == arr[j])
-                                        {
-                                            <p>
-                                                @user.LastName @user.Name
-                                                @{
-                                                    foreach (var userdomain in user.UserDomains)
+                                        var num = ViewBag.Sizes[i];
+                                        <div style="border:solid #dbd4d4 1px; margin-bottom: 10px;">
+                                            <p style="font-weight: bold; font-size: 18px;">@ViewBag.Dates[i].ToString("dd/MM/yyyy")</p>
+                                            @for (var j = 0; j < num; j++) //по элементам в варианте
+                                            {
+                                                foreach (var user in Model.Users)
+                                                {
+                                                    var arr = ViewBag.Arrays[i];
+                                                    if (user.ID == arr[j])
                                                     {
-                                                        if (userdomain.DomainID == Model.Query.Task.DomainID)
-                                                        {
-                                                            <span>Коэффициент компетентности - @userdomain.CompetitionCoef</span>
-                                                        }
+                                                        <p>
+                                                            @user.LastName @user.Name
+                                                            @{
+                                                                foreach (var userdomain in user.UserDomains)
+                                                                {
+                                                                    if (userdomain.DomainID == Model.Query.Task.DomainID)
+                                                                    {
+                                                                        <span>Коэффициент компетентности - @userdomain.CompetitionCoef</span>
+                                                                    }
+                                                                }
+                                                            }
+                                                        </p>
                                                     }
                                                 }
-                                            </p>
-                                        }
+                                            }
+                                        </div>
                                     }
                                 }
-                            </div>
-                        }
-                    }
-                    else if (Model.Users.Count == 0)
-                    {
-                        <p>Не удалось подобрать экспертную группу по заданным параметрам</p>
+                                else if (Model.Users.Count == 0)
+                                {
+                                    <p>Не удалось подобрать экспертную группу по заданным параметрам</p>
+                                }
+                            }
+                        </dd>
                     }
                 }
-            </dd>
-        }
-        }
-    </dl>
+            </dl>
+        </div>
+    </div>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Query.ID">Редактировать</a> |
