--- a/Diploma_Curator_Subsystem/Diploma_Curator_Subsystem/Views/Users/Projects.cshtml
+++ b/Diploma_Curator_Subsystem/Diploma_Curator_Subsystem/Views/Users/Projects.cshtml
@@ -56,7 +56,7 @@
                     {
                     <div>
                         <p class="bg-success" style="font-size: 16px; font-weight: bold;">
-                            Текущие проекты
+                            Текущий проект
                         </p>
                         <ul>
                             @{
